2013-09-11  Roland Levillain  <roland@lrde.epita.fr>

	Regen Milena's unit-tests.mk.

	* tests/unit_test/unit-tests.mk: Regen.

2013-09-10  Roland Levillain  <roland@lrde.epita.fr>

	Milena: Remove lines `VARIABLE = @VARIABLE@' from Makefile.am's.

	* apps/constrained-connectivity/Makefile.am,
	* apps/generic-skel/Makefile.am,
	* apps/graph-morpho/Makefile.am,
	* apps/mesh-segm-skel/Makefile.am,
	* apps/morphers/Makefile.am,
	* apps/papers/levillain.09.ismm/Makefile.am,
	* tests/tests.mk,
	* tools/tools.mk:
	Here, as Automake 1.11+ already takes care of this.

2013-09-09  Roland Levillain  <roland@lrde.epita.fr>

	Milena: Do not look for headers in the build tree uselessly.

	* tools/tools.mk (AM_CPPFLAGS): Remove Milena's build dir from the
	file inclusion path.
	Remove outdated FIXMEs.
	* apps/constrained-connectivity/Makefile.am,
	* apps/graph-morpho/Makefile.am,
	* apps/mesh-segm-skel/Makefile.am,
	* apps/morphers/Makefile.am,
	* apps/papers/levillain.09.ismm/Makefile.am
	(AM_CPPFLAGS): Explain why $(top_builddir)/milena is part of the
	file inclusion path.
	* apps/generic-skel/Makefile.am,
	* doc/Makefile.am,
	* tests/tests.mk
	(AM_CPPFLAGS): Uniformity changes.

2013-09-06  Roland Levillain  <roland@lrde.epita.fr>

	Force make to regen Milena's mln/version.hh before other files.

	* Makefile.am (SUBDIRS): Prepend `.' to the list of subdirectories
	to force make to honor this Makefile's targets before recursing in
	Milena's subdirectories.

2013-09-06  Roland Levillain  <roland@lrde.epita.fr>

	Have `make regen' also regenerate Milena's mln/version.hh.

	* Makefile.am (regen-am): Here.

2013-09-06  Roland Levillain  <roland@lrde.epita.fr>

	Do not harcode OLN_PACKAGE_AUTHORS in Milena's mln/version.hh.in.

	* mln/version.hh.in (OLN_PACKAGE_AUTHORS): Set it to
	@PACKAGE_AUTHORS@.

2013-09-06  Roland Levillain  <roland@lrde.epita.fr>

	Generate Milena's mln/version.hh in the source tree.

	* Makefile.am ($(srcdir)/mln/version.hh): New target, generating